# chain-reaction

./: .babelrc  .eslintignore  .eslintrc.js  .gitignore  181.03da9a96cea7976ac776.js  181.03da9a96cea7976ac776.js.map  181.0d64dedd0d2021f5a5f6.js  181.0d64dedd0d2021f5a5f6.js.map  181.5794a76c476bea11d7aa.js  181.5794a76c476bea11d7aa.js.map  181.bbc32eece32a0fd80ae7.js  181.bbc32eece32a0fd80ae7.js.map  181.c9c9408694a3705361b5.js  181.c9c9408694a3705361b5.js.map  290.2ce27f06d45981ecbc72.js  290.2ce27f06d45981ecbc72.js.map  57.b2f96223d90fe019e915.js  57.b2f96223d90fe019e915.js.map  828.0c3dcee1659ca6f90471.js  828.0c3dcee1659ca6f90471.js.map  828.5cda38ca16c150d29ef1.js  828.5cda38ca16c150d29ef1.js.map  828.8daa7f4a61d269ec977d.js  828.8daa7f4a61d269ec977d.js.map  828.cfc04adab135010b40c4.js  828.cfc04adab135010b40c4.js.map  828.f2cac1d8d032124c1fc5.js  828.f2cac1d8d032124c1fc5.js.map  828.fc200a83cd3257c4d996.js  828.fc200a83cd3257c4d996.js.map  930.edcc8a2e1a891789eec0.js  930.edcc8a2e1a891789eec0.js.map  LICENSE  README.md  demo.1418cad23d8826c3acb3.js  demo.1418cad23d8826c3acb3.js.map  demo.19030306c2033ef22b0b.js  demo.19030306c2033ef22b0b.js.map  demo.25cd6420e0d16b98534a.js  demo.25cd6420e0d16b98534a.js.map  (+42 more)
public/: index.html  simulator.html
src/: chain_reaction.ts  demo.ts  lib.ts  main.ts  players.ts  renderer.ts  runner.ts  simulator.ts  state.ts  util.ts
src/game/rust/: Cargo.toml
src/game/rust/src/: array2d.rs  chain_reaction.rs  lib.rs  main.rs  players.rs  runner.rs
src/game/rust/src/players/: avoid_others.rs  form_chains.rs  play_randomly.rs
(+55 files in other folders)
