[package]
name = "chain_reaction"
version = "0.1.0"
authors = ["Vukašin Stepanović <vukasinstepanovic@gmail.com>"]
description = "Implementation of the game Chain Reaction."
license = "MIT"
edition = "2018"
repository = "https://github.com/Asha20/chain-reaction"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.8.3"
wasm-bindgen = "0.2.71"
getrandom = { version = "0.2", features = ["js"] }
